# llm-lib-lag

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  hello.py  main.py  pyproject.toml  runs.jsonl  visualization.ipynb
.github/workflows/: test.yml
nbks/: test-fetchers.ipynb
src/: evaluation.py  fetchers.py  ground_thruths.py  io_utils.py  models.py  runner.py
src/llm_lib_lag/: cli.py  evaluation.py  fetchers.py  ground_thruths.py  ground_truths.py  io_utils.py  models.py  runner.py
src/llm_lib_lag/fetchers/: __init__.py  fetchers.py  ruby_fetchers.py  util.py
tests/fetchers/: test_fetchers.py  test_ruby_fetchers.py
